<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_r8"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:lines="2"
            android:text="@string/request_invite_title"
            android:textColor="@color/white" />

        <TextView
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:lines="2"
            android:text="@string/invite_tips"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.ericpham.broccoinvite.presentation.widgets.formEditText.FormEditText
            android:id="@+id/form_name"
            style="@style/TextInputOutLined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name_label"
            app:hintTextColor="@color/primary_darker">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.ericpham.broccoinvite.presentation.widgets.formEditText.FormEditText>

        <com.ericpham.broccoinvite.presentation.widgets.formEditText.FormEditText
            android:id="@+id/form_email"
            style="@style/TextInputOutLined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email_label"
            app:hintTextColor="@color/primary_darker">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.ericpham.broccoinvite.presentation.widgets.formEditText.FormEditText>

        <com.ericpham.broccoinvite.presentation.widgets.formEditText.FormEditText
            android:id="@+id/form_confirm_email"
            style="@style/TextInputOutLined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_email_label"
            app:hintTextColor="@color/primary_darker">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.ericpham.broccoinvite.presentation.widgets.formEditText.FormEditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subscribe"
                style="@style/ColoredButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/request_button"
                app:backgroundTint="@color/primary_darker" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>